--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hangman
-    </title>
+    <title>Hangman</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/path/to/obnoxious.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
